# OpenCV

vologin_i_a/: CMakeLists.txt
vologin_i_a/bin.dbg/: DisplayImage  lab01  lab02  lab02.report.md  lab03
vologin_i_a/bin.rel/: DisplayImage  lab02  lab02.report.md  lab03  lab04
vologin_i_a/data/: video2.MOV  video4.MOV  video5.MOV
vologin_i_a/prj.labs/lab01/: CMakeLists.txt  lab01.cpp  lab01.report.md.in.txt
vologin_i_a/prj.labs/lab02/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
vologin_i_a/prj.labs/lab03/: CMakeLists.txt  lab03.cpp
vologin_i_a/prj.labs/lab04/: lab04.cpp  lab04.report.md.in.txt
