cmake_minimum_required(VERSION 3.8)
project( lab01)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( lab01 lab01.cpp lab01.report.md.in.txt)
file(READ lab01.cpp cpp_source)
configure_file(lab01.report.md.in.txt ${CMAKE_CURRENT_BINARY_DIR}/lab01.report.md @ONLY)
target_link_libraries( lab01 ${OpenCV_LIBS} )