cmake_minimum_required(VERSION 3.8)
project( lab02)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( lab02 lab02.cpp lab02.report.md.in.txt)
file(READ lab02.cpp cpp_source)
configure_file(lab02.report.md.in.txt ${CMAKE_CURRENT_BINARY_DIR}/lab02.report.md @ONLY)
target_link_libraries( lab02 ${OpenCV_LIBS} )
